Implement TimeSpec v2 across API and UI

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,10 +2,15 @@
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": "..",
     "moduleResolution": "NodeNext",
     "module": "NodeNext",
-    "types": ["node"]
+    "types": [
+      "node"
+    ]
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "../packages/shared/src"
+  ]
 }
