fix(deploy): add dist/index.js shim for Azure Functions entrypoint

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,6 +93,7 @@ jobs:
           echo "CHECK host.json" ; test -f api_deploy/host.json
           echo "CHECK package.json" ; test -f api_deploy/package.json
           echo "CHECK pnpm-lock.yaml" ; test -f api_deploy/pnpm-lock.yaml
+          echo "CHECK dist/index.js" ; test -f api_deploy/dist/index.js
           echo "CHECK dist/api/src/index.js" ; test -f api_deploy/dist/api/src/index.js
 
           echo "CHECK node_modules exists" ; test -d api_deploy/node_modules
