--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -60,7 +60,7 @@ jobs:
         with:
           action: upload
           app_location: apps/web
-          app_artifact_location: apps/web/dist
+          output_location: dist
           skip_app_build: true
           api_location: ""
           skip_api_build: true
