--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -39,36 +39,17 @@ jobs:
           VITE_API_BASE_URL: "https://familyscheduler-api-prod-c4cuakggcff8bvbh.westus-01.azurewebsites.net"
         run: pnpm --filter @familyscheduler/web build
 
-      - name: Docker version (diagnostic)
-        run: docker --version || true
-
-      - name: Disk usage (diagnostic)
-        run: df -h
-
-      - name: Workspace size (diagnostic)
-        run: du -sh . || true
-
-      - name: Workspace listing (diagnostic)
-        run: ls -la
-
-      - name: Inspect built index.html (diagnostic)
+      - name: Verify built output (diagnostic)
         run: |
           set -euo pipefail
           ls -la apps/web/dist
-          echo "---- index.html script tags ----"
           grep -n "<script" apps/web/dist/index.html || true
 
-      - name: Deploy to Azure Static Web Apps
-        uses: Azure/static-web-apps-deploy@v1
+      - name: Deploy via SWA CLI (no Docker)
         env:
-          VITE_BUILD_SHA: ${{ github.sha }}
-          VITE_BUILD_TIME: ${{ github.run_id }}-${{ github.run_number }}
-          VITE_API_BASE_URL: "https://familyscheduler-api-prod-c4cuakggcff8bvbh.westus-01.azurewebsites.net"
-        with:
-          action: upload
-          app_location: apps/web/dist
-          skip_app_build: true
-          api_location: ""
-          skip_api_build: true
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          SWA_DEPLOYMENT_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+        run: |
+          set -euo pipefail
+          test -f apps/web/dist/index.html
+          # Deploy the already-built artifact
+          npx -y @azure/static-web-apps-cli@latest deploy apps/web/dist --deployment-token "$SWA_DEPLOYMENT_TOKEN"
