--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -51,5 +51,16 @@ jobs:
         run: |
           set -euo pipefail
           test -f apps/web/dist/index.html
-          # Deploy the already-built artifact
-          npx -y @azure/static-web-apps-cli@latest deploy apps/web/dist --deployment-token "$SWA_DEPLOYMENT_TOKEN"
+          npx -y @azure/static-web-apps-cli@latest deploy \
+            apps/web/dist \
+            --deployment-token "$SWA_DEPLOYMENT_TOKEN" \
+            --env production \
+            --verbose
+
+      - name: Verify production HTML updated
+        run: |
+          set -euo pipefail
+          sleep 10
+          html="$(curl -fsSL "https://red-cliff-0f62ac31e.4.azurestaticapps.net/?v=${GITHUB_SHA}")"
+          echo "$html" | grep -q "/assets/" || (echo "ERROR: production HTML missing /assets/"; echo "$html"; exit 1)
+          echo "$html" | grep -q "/src/main.tsx" && (echo "ERROR: production still serving /src/main.tsx"; exit 1) || true
