--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.3.1",
     "@fontsource/inter": "^5.2.6",
     "@mui/material": "^6.4.7",
+    "@mui/icons-material": "^6.4.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0"
   },
