--- a/.github/workflows/swa-web-staging.yml
+++ b/.github/workflows/swa-web-staging.yml
@@ -36,14 +36,12 @@ jobs:
           VITE_API_BASE_URL: "https://familyscheduler-api-staging.azurewebsites.net"
         run: pnpm --filter @familyscheduler/web build
 
-      - name: Deploy to SWA (staging)
-        env:
-          SWA_DEPLOYMENT_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_STAGING }}
-        run: |
-          set -euo pipefail
-          test -f apps/web/dist/index.html
-          npx -y @azure/static-web-apps-cli@latest deploy \
-            apps/web/dist \
-            --deployment-token "$SWA_DEPLOYMENT_TOKEN" \
-            --env production  \
-            --verbose
+      - name: Deploy via SWA GitHub Action (staging)
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_STAGING }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          action: "upload"
+          app_location: "apps/web"
+          output_location: "dist"
+          skip_app_build: true
