--- a/.github/workflows/swa-web.yml
+++ b/.github/workflows/swa-web.yml
@@ -45,17 +45,15 @@ jobs:
           ls -la apps/web/dist
           grep -n "<script" apps/web/dist/index.html || true
 
-      - name: Deploy via SWA CLI (no Docker)
-        env:
-          SWA_DEPLOYMENT_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-        run: |
-          set -euo pipefail
-          test -f apps/web/dist/index.html
-          npx -y @azure/static-web-apps-cli@latest deploy \
-            apps/web/dist \
-            --deployment-token "$SWA_DEPLOYMENT_TOKEN" \
-            --env production \
-            --verbose
+      - name: Deploy via SWA GitHub Action
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          action: "upload"
+          app_location: "apps/web"
+          output_location: "dist"
+          skip_app_build: true
 
       - name: Verify production HTML updated
         run: |
