--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
     "@azure/functions": "^4.8.0",
     "@azure/identity": "^4.6.0",
     "@azure/storage-blob": "^12.31.0",
-    "@azure/storage-common": "^12.3.0"
+    "@azure/storage-common": "^12.3.0",
+    "@azure/data-tables": "^13.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
