--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
     "test": "pnpm run build && node --test dist/**/*.test.js"
   },
   "dependencies": {
-    "@azure/communication-email": "^1.0.0",
+    "@azure/communication-email": "1.1.0",
     "@azure/core-rest-pipeline": "^1.22.2",
     "@azure/functions": "^4.8.0",
     "@azure/identity": "^4.6.0",
