Consolidate docs into docs/specs with consistent naming

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:web": "pnpm --filter @familyscheduler/web dev",
     "dev:api": "pnpm --filter @familyscheduler/api dev",
     "verify:tree": "node -e \"const fs=require('fs');['apps','api','packages','docs','scripts'].forEach(d=>console.log(`${fs.existsSync(d)?'\u2713':'\u2717'} ${d}`));\"",
-    "verify:docs": "node -e \"const fs=require('fs');const required=['README.md','PROJECT_STATUS.md','CODEX_LOG.md','docs/architecture.md','docs/api.md'];const missing=required.filter(f=>!fs.existsSync(f));if(missing.length){console.error('Missing required docs:\n'+missing.join('\n'));process.exit(1);}console.log('Required docs present');\"",
+    "verify:docs": "node -e \"const fs=require('fs');const required=['README.md','PROJECT_STATUS.md','CODEX_LOG.md','docs/specs/SPEC_ARCHITECTURE.md','docs/api.md'];const missing=required.filter(f=>!fs.existsSync(f));if(missing.length){console.error('Missing required docs:\\n'+missing.join('\\\\n'));process.exit(1);}console.log('Required docs present');\"",
     "test": "echo \"no tests yet\"",
     "lint": "echo \"no lint yet\"",
     "typecheck": "echo \"no typecheck yet\"",
