--- a/.github/workflows/swa-web-staging.yml
+++ b/.github/workflows/swa-web-staging.yml
@@ -34,6 +34,7 @@ jobs:
           VITE_BUILD_SHA: ${{ github.sha }}
           VITE_BUILD_TIME: ${{ github.run_id }}-${{ github.run_number }}
           VITE_API_BASE_URL: "https://familyscheduler-api-staging.azurewebsites.net"
+          VITE_DOGFOOD: "1"
         run: pnpm --filter @familyscheduler/web build
 
       - name: Verify dist exists
